# AI_Project

./: .gitignore  README.md  bot.py  check_db.py  database.py  database_old.py  main.py  main.py.backup  professional24_bot.service  prompt_sync.py  pyproject.toml  requirements.txt  requirements.txt.backup  test_config.py
backup/: build_stats.json  chunks_final.json
config/: __init__.py  admin_keyboards.py  buttons.py  config.py  gpt_prompt.json  keyboards.py  prompt_templates.json  services.json
data/: build_stats.json  chunks_final.json  dialogs.db  faiss.index  metadata.json
database/: __init__.py  admins.py  clients.py  config.py  init_db.py  messages.py  statistics.py
handlers/: admin.py  admin_management.py  admin_utils.py  gpt_chat.py  menu.py  start.py  utilities.py
parser/: .env.example  .gitignore  build.py  main.py  pyproject.toml  test_paths.py
parser/app/bot/: handlers.py  keyboards.py  messages.py
parser/app/bot/config/: settings.py
parser/app/bot/prompts/: __init__.py
parser/app/config/: paths.py  settings.json  settings.py
parser/app/gpt/: client.py  generator.py
parser/app/parser/: crawler.py  extractor.py
parser/app/pipeline/: pipeline.py
parser/app/processing/: block_builder.py  cleaner.py  deduplicator.py  splitter.py
parser/app/prompts/: About_project.txt  answer.txt
parser/app/rag/: chunker.py  embedder.py  search.py  tokenizer.py  vector_store.py
parser/app/utils/: cost_tracker.py  logger.py
parser/output/: build_stats.json  chunks_final.json  faiss.index  metadata.json  progress.json  raw_text.txt
(+26 files in other folders)
