[project]
name = "smartcrawler-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "faiss-cpu>=1.13.2",
    "matplotlib>=3.10.8",
    "openai>=2.32.0",
    "python-dotenv>=1.2.2",
    "python-telegram-bot>=22.7",
    "requests>=2.33.1",
    "tiktoken>=0.12.0",
    "tqdm>=4.67.3",
]
